[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Networking/Network.gd" type="Script" id=1]

[node name="Network" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 1908.0
margin_bottom = 1068.0

[node name="NetworkMode" type="HBoxContainer" parent="VBC"]
margin_right = 1896.0
margin_bottom = 20.0
custom_constants/separation = 8

[node name="Host" type="Button" parent="VBC/NetworkMode"]
margin_right = 42.0
margin_bottom = 20.0
text = "Host"

[node name="Join" type="Button" parent="VBC/NetworkMode"]
margin_left = 50.0
margin_right = 85.0
margin_bottom = 20.0
text = "Join"

[node name="Disconnect" type="Button" parent="VBC/NetworkMode"]
visible = false
margin_left = 93.0
margin_right = 177.0
margin_bottom = 20.0
text = "Disconnect"

[node name="JoinMode" type="HBoxContainer" parent="VBC"]
visible = false
margin_top = 24.0
margin_right = 1896.0
margin_bottom = 48.0
custom_constants/separation = 24

[node name="Address" type="HBoxContainer" parent="VBC/JoinMode"]
margin_right = 192.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBC/JoinMode/Address"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Address: "

[node name="LineEdit" type="LineEdit" parent="VBC/JoinMode/Address"]
margin_left = 64.0
margin_right = 192.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )

[node name="Port" type="HBoxContainer" parent="VBC/JoinMode"]
margin_left = 216.0
margin_right = 312.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBC/JoinMode/Port"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "Port: "

[node name="LineEdit" type="LineEdit" parent="VBC/JoinMode/Port"]
margin_left = 38.0
margin_right = 96.0
margin_bottom = 24.0

[node name="Connect" type="Button" parent="VBC/JoinMode"]
margin_left = 336.0
margin_right = 400.0
margin_bottom = 24.0
text = "Connect"

[node name="HostMode" type="HBoxContainer" parent="VBC"]
visible = false
margin_top = 24.0
margin_right = 1896.0
margin_bottom = 48.0
custom_constants/separation = 24

[node name="Port" type="HBoxContainer" parent="VBC/HostMode"]
margin_right = 96.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBC/HostMode/Port"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "Port: "

[node name="LineEdit" type="LineEdit" parent="VBC/HostMode/Port"]
margin_left = 38.0
margin_right = 96.0
margin_bottom = 24.0

[node name="MaxPlayers" type="HBoxContainer" parent="VBC/HostMode"]
margin_left = 120.0
margin_right = 266.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBC/HostMode/MaxPlayers"]
margin_top = 5.0
margin_right = 84.0
margin_bottom = 19.0
text = "Max Players: "

[node name="LineEdit" type="LineEdit" parent="VBC/HostMode/MaxPlayers"]
margin_left = 88.0
margin_right = 146.0
margin_bottom = 24.0

[node name="Host" type="Button" parent="VBC/HostMode"]
margin_left = 290.0
margin_right = 332.0
margin_bottom = 24.0
text = "Host"

[connection signal="pressed" from="VBC/NetworkMode/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBC/NetworkMode/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBC/NetworkMode/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="VBC/JoinMode/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="VBC/HostMode/Host" to="." method="_on_Hosting_pressed"]
